# parallel-matrix-multiplication

./: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  main.cpp  matrix_mul_mpi.cpp  matrix_mul_mpi.h  matrix_mul_pthreads.cpp  matrix_mul_pthreads.h  statistics.py  test.cpp  test.h  utils.cpp  utils.h
data/: data_10_1000_100.txt  data_12_1000_100.txt  data_14_1000_100.txt  data_16_1000_100.txt  data_18_1000_100.txt  data_20_1000_100.txt  data_2_1000_100.txt  data_4_1000_100.txt  data_6_1000_100.txt  data_8_1000_100.txt
data/matrix/: data_20_1000_100.txt  data_20_100_100.txt  data_20_300_100.txt  data_20_500_100.txt  data_20_700_100.txt
data/mutex/: data_14_1000_100.txt  data_4_1000_100.txt  data_6_1000_100.txt
